<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MOBIDEVLAND</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_mbtouch">Touch</string>
    <string name="title_activity_mbnews">NEWS</string>
    <string name="title_activity_mbmap">Carte</string>

    <!-- login -->
    <string name="title">#MOBDL</string>
    <string name="inscription">INSCRIPTION</string>
    <string name="become_member">Je deviens membre gratuitement et je m\'inscris !</string>
    <string name="facebook">se connecter avec facebook</string>
    <string name="or">ou</string>
    <string name="surname">Prénom</string>
    <string name="name">Nom</string>
    <string name="mail">e-mail</string>
    <string name="password">Mot de passe</string>
    <string name="confirm_password">Confirmer mot de passe</string>
    <string name="accept_cgu">J\'accepte les conditions d\'utilisation</string>
    <string name="later">Plus tard</string>
    <string name="im_in">J\'en suis</string>
    <string name="shareTo">Partager</string>
    <string name="shareToContent">Utilier MEDIDEVLAND ! c\'est gratuit ! </string>
    
    <!-- map -->
    <string name="infowindow_title">Info window title</string>
    <string name="long_text">Le Lorem Ipsum est simplement du faux texte employé dans la composiBon et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l\'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n\'a pas fait que survivre cinq siècles, mais s\'est aussi adapté à la bureauBque informaBque, sans que son contenu n\'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus. Le Lorem Ipsum est simplement du faux texte employé dans la composiBon et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l\'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n\'a pas fait que survivre cinq siècles, mais s\'est aussi adapté à la bureauBque informaBque, sans que son contenu n\'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus</string>

</resources>
