<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:paddingBottom="5dp"
            android:paddingLeft="@dimen/margin"
            android:paddingTop="5dp"
            android:text="Mon compte"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#CCCCCC" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin20"
                    android:layout_marginRight="@dimen/margin20"
                    android:layout_marginTop="@dimen/margin"
                    android:background="@drawable/butt_facebook"
                    android:drawableLeft="@drawable/icon_facebook_selector"
                    android:drawablePadding="@dimen/margin"
                    android:paddingLeft="@dimen/margin"
                    android:paddingRight="@dimen/margin"
                    android:text="Se connecter avec Facebook"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textColor="#FF0000"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin20"
                    android:layout_marginRight="@dimen/margin20"
                    android:layout_marginTop="@dimen/margin"
                    android:background="@drawable/field_1"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress"
                    android:nextFocusLeft="@+id/password"
                    android:paddingLeft="@dimen/margin20" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin20"
                    android:layout_marginRight="@dimen/margin20"
                    android:layout_marginTop="@dimen/margin"
                    android:background="@drawable/field_1"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:nextFocusLeft="@+id/confirm_password"
                    android:paddingLeft="@dimen/margin20" />

                <TextView
                    android:id="@+id/forgotten"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/margin20"
                    android:layout_marginTop="@dimen/margin"
                    android:autoLink="web"
                    android:text="Mot de passe oublié"
                    android:textColor="#000000" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:layout_marginLeft="@dimen/margin20"
                    android:layout_marginRight="@dimen/margin20"
                    android:layout_marginTop="@dimen/margin" >

                    <Button
                        android:id="@+id/create"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:background="@drawable/butt_later"
                        android:text="Créer compte"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/butt_connecter_register"
                        android:text="Se connecter"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <View
        android:id="@+id/mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AA000000" />

</FrameLayout>